# bsky-chessbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  chess_diagram_to_fen.py  docker-compose.yml  download_models.sh  download_pychess_games.sh  download_website_screenshots.sh  main.py  pyproject.toml  train.sh
chessbot/: __init__.py  analysis.py  bot.py  fen.py  listener.py
resources/: COPYING.md
src/: common.py  consts.py  games.py  pgn_parser.py  render_config.py
src/board_image_rotation/: dataset.py  show_wrong_evals.py  train.py
src/board_orientation/: dataset.py  model.py  show_wrong_evals.py  train.py
src/bounding_box/: dataset.py  generate_chessboards_bbox.py  inference.py  model.py  train.py
src/existence/: dataset.py  generate_existence.py  model.py  show_wrong_evals.py  train.py
src/fen_recognition/: dataset.py  generate_chessboards.py  model.py  show_wrong_evals.py  train.py
